tests/e2e/ui/wrong_number_generics.stderr
error: custom attribute panicked
 --> tests/e2e/ui/wrong_number_generics.rs:7:1
  |
7 | #[auto_register_type(plugin = TestPlugin, generics(bool))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: index out of bounds: the len is 1 but the index is 2
